docs/v4.6.x/_sources/reference/wwctl_node_set.rst.txt
.. _wwctl_node_set:

wwctl node set
--------------

Configure node properties

Synopsis
~~~~~~~~


This command sets configuration properties for nodes matching PATTERN.

Note: use the string 'UNSET' to remove a configuration
Node patterns are a comma-separated list of individual pattern.
Each pattern can either be a full node name or a node range like node[01-03,05].

::

  wwctl node set [OPTIONS] PATTERN

Options
~~~~~~~

::

  -a, --all                          Set all nodes
      --asset string                 Set the node's Asset tag (key)
  -c, --cluster string               Set cluster group
      --comment string               Set arbitrary string comment
  -e, --discoverable WWbool[=true]   Make discoverable in given network (true/false)
      --diskdel string               delete the disk from the configuration
      --diskname string              set diskdevice name
      --diskwipe                     whether or not the partition tables shall be wiped
  -f, --force                        Force configuration (even on error)
      --fsdel string                 delete the fs from the configuration
      --fsformat string              format of the file system
      --fsname string                set the file system name which must match a partition name
      --fspath string                the mount point of the file system
      --fswipe                       wipe file system at boot
  -G, --gateway ip                   Set the node's IPv4 network device gateway
      --gateway6 ip                  Set the node's IPv6 network device gateway
  -h, --help                         help for set
  -H, --hwaddr string                Set the device's HW address for given network
      --image string                 Set image name
  -i, --init string                  Define the init process to boot the image
  -I, --ipaddr ip                    IPv4 address in given network
      --ipaddr6 ip                   IPv6 address in given network
      --ipmiaddr ip                  Set the IPMI IP address
      --ipmiescapechar string        Set the IPMI escape character (defaults: '~')
      --ipmigateway ip               Set the IPMI gateway
      --ipmiinterface string         Set the node's IPMI interface (defaults: 'lan')
      --ipminetmask ip               Set the IPMI netmask
      --ipmipass string              Set the IPMI password
      --ipmiport string              Set the IPMI port
      --ipmitagadd stringToString    add ipmi tags (default [])
      --ipmitagdel strings           delete ipmi tags
      --ipmitemplate string          template used for ipmi command
      --ipmiuser string              Set the IPMI username
      --ipmiwrite WWbool[=true]      Enable the write of ipmi configuration (true/false)
      --ipxe string                  Set the iPXE template name
  -A, --kernelargs strings           Set kernel arguments
      --kernelversion string         Set kernel version
      --mtu string                   Set the mtu
      --netdel string                network to delete
  -N, --netdev string                Set the device for given network
  -M, --netmask ip                   Set the networks netmask
      --netname string               network which is modified (default "default")
      --nettagadd stringToString     add network tags (default [])
      --nettagdel strings            delete network tags
      --onboot WWbool[=true]         Enable/disable network device (true/false)
      --partcreate                   Create partition if it does not exist
      --partdel string               delete the partition from the configuration
      --partname string              set the partition name so it can be used by a file system
      --partnumber string            Set the partition number, if not set next free slot is used
      --partsize string              Set the size of the partition, if not set maximal possible size is used
      --parttype string              Set the partition type GUID
      --prefixlen6 string            Set the networks IPv6 prefix length
  -p, --primarynet string            Set the primary network interface
  -P, --profile strings              Set the node's profile members (comma separated)
      --root string                  Define the rootfs
  -R, --runtime-overlays strings     Set the runtime overlay
  -O, --system-overlays strings      Set the system overlay
      --tagadd stringToString        add tags (default [])
      --tagdel strings               add tags
  -T, --type string                  Set device type of given network
  -y, --yes                          Set 'yes' to all questions asked

Options inherited from parent commands
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

::

  -d, --debug                 Run with debugging messages enabled.
  -v, --verbose               Run with increased verbosity.
      --warewulfconf string   Set the warewulf configuration file

SEE ALSO
~~~~~~~~

* :ref:`wwctl node <wwctl_node>` 	 - Node management

